--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,21 @@
-theme: jekyll-theme-slate
+---
+# Welcome to Jekyll!
+#
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+
+title: FoABW UK
+email: me@example.com
+description: >- # this means to ignore newlines until "baseurl:"
+  
+# baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://andy2k11.gihub.io" # the base hostname & protocol for your site, e.g. http://example.com
+# twitter_username: jekyllrb
+# github_username:  jekyll
+
+# Build settings
+theme: minima
+markdown: kramdown
