--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   
 # baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://andy2k11.gihub.io" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
+# twitter_username: 
+facebook_username: FoABW
 # github_username:  jekyll
 
 # Build settings
