--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: FoABW UK
-email: me@example.com
+# email: me@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   
 # baseurl: "" # the subpath of your site, e.g. /blog
