--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: FoABW UK
-# email: me@example.com
+email: lorrainemaynard04@gmail.com
+phone: 07802 162275
 description: >- # this means to ignore newlines until "baseurl:"
   
 # baseurl: "" # the subpath of your site, e.g. /blog
