--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: FoABW UK
-email: lorrainemaynard04@gmail.com
+email: mailto:lorrainemaynard04@gmail.com
 phone: 07802 162275
 description: >- # this means to ignore newlines until "baseurl:"
   
