--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: FoABW UK
-email: mailto:lorrainemaynard04@gmail.com
-phone: 07802 162275
-description: >- # this means to ignore newlines until "baseurl:"
+email: lorrainemaynard04@gmail.com
+telephone: 07802 162275
+# description: >- # this means to ignore newlines until "baseurl:"
   
 # baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://andy2k11.gihub.io" # the base hostname & protocol for your site, e.g. http://example.com
