--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,14 @@
 # in the templates via {{ site.myvariable }}.
 
 title: FoABW UK
-email: lorrainemaynard04@gmail.com
-telephone: 07802 162275
-# description: >- # this means to ignore newlines until "baseurl:"
-  
+description: >- # this means to ignore newlines until "baseurl:"
+    telephone: 07802 162275
 # baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://andy2k11.gihub.io" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: 
 facebook_username: FoABW
 # github_username:  jekyll
+email: lorrainemaynard04@gmail.com
+telephone: 07802 162275
 
 # Build settings
 theme: minima
