--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title: FoABW UK
 description: >- # this means to ignore newlines until "baseurl:"
     telephone: 07802 162275
 # baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://foabw.gihub.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://foabw.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 facebook_username: FoABW
 # github_username:  jekyll
 email: lorrainemaynard04@gmail.com
